アンカー機能の拡張: 編集および削除コマンドの追加、アンカーの終了行番号を管理する機能を実装

--- a/package.json
+++ b/package.json
@@ -43,6 +43,18 @@
           "command": "code-anchor.addAnchor",
           "group": "navigation"
         }
+      ],
+      "view/item/context": [
+        {
+          "command": "code-anchor.editAnchor",
+          "when": "view == codeAnchorView",
+          "group": "inline"
+        },
+        {
+          "command": "code-anchor.deleteAnchor",
+          "when": "view == codeAnchorView",
+          "group": "inline"
+        }
       ]
     }
   },
