アンカー機能の改善: UUIDの追加、アイコンとノートの管理機能を実装し、デコレーションの更新を追加

--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "typescript": "^5.4.5",
     "glob": "^10.3.12",
     "mocha": "^10.4.0",
-    "ts-loader": "^9.5.1"
+    "ts-loader": "^9.5.1",
+    "uuid": "^9.0.1",
+    "@types/uuid": "^9.0.8"
   }
 } 
