package.jsonの更新: アクティベーションイベントに新しいコマンドを追加

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:code-anchor.addAnchor",
+    "onView:codeAnchorView"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
